Task #231459 - [FE] - Issuance dashboard UI changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,10 @@
   <ng-template [ngIf]="isFooter">
     <!-- <div class="pt-70"></div>  -->
     <app-loader></app-loader>
-
-    <!-- <footer class="footer fixed-bottom">
-
-     <div>
-      <div  class="clr-dark fs-14 lh-21 fw-400 ff-poppins">{{footerText}}</div>      </div>
-
-  </footer> -->
+    <footer class="footer fixed-bottom">
+      <div>
+        <div class="clr-dark fs-14 lh-21 fw-400 ff-poppins">{{footerText}}</div>
+      </div>
+    </footer>
   </ng-template>
 </div>
