--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,7 +1,7 @@
 <div class="side-menu">
   <div class="app-icon">
-    <!-- <img src="assets/images/educert_logo.png" alt="App Icon"> -->
-    Logo
+    <img src="assets/images/logo.png" alt="App Icon">
+    Digi-Vritti
   </div>
   <ul>
     <li class="fs-16 p-2" *ngFor="let menuItem of menuConfig?.menus" [class.active]="activeMenu === menuItem?.title">
