--- a/src/app/main-header/main-header.component.scss
+++ b/src/app/main-header/main-header.component.scss
@@ -118,7 +118,7 @@ header {
   height: 32px;
   border-radius: 50%;
   /* Makes it a circle */
-  background-color: #366746;
+  background-color: var(--secondarybgColor);
   /* Circle background color */
   color: white;
   /* Text color */
