Task #231459 - [FE] - Issuance dashboard,landing Page UI changes as per figma

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-light bg-white p-48">
       <div class="navbar-brand d-contents" id="navbarExample01">
         <div class="nav-item active logo-text d-flex align-items-center gap-15 homeHeaderLogo">
-          <img src="assets/images/logo.png" />
+          <img src="assets/images/Digi-logo.png" />
           Digi Vritti
           <!-- <div (click)="postFile()" class="fs-12 lh-12 font-weight-bold lang-btn nav-link-color">
             ADMIN
@@ -24,7 +24,9 @@
             <!-- <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color lh-12">SIGN IN</span>
             </a> -->
             <div class="button">
-              <a href="/login" class="clr-grn">Sign In</a>
+              <a href="/login"
+                class="btn btn-bg btn-style text-primary-color text-end fw-bold text-capitalize dns-btn pt-2 dsn-g-btn">Sign
+                In</a>
             </div>
             <!-- <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN UP</span>
             </a> -->
@@ -129,7 +131,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="accordionWrapper">
-              <button class="btn acc-header d-flex align-items-center justify-content-between" type="button"
+              <button class="acc-header d-flex align-items-center justify-content-between" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
                 aria-controls="collapseExample" (click)="toggleIcon()">
                 <div class="accordionTitle">can I download and print my certificate anytime?</div>
@@ -157,7 +159,7 @@
           </div>
           <div class="col-md-6">
             <div class="accordionWrapper">
-              <button class="btn acc-header d-flex align-items-center justify-content-between" type="button"
+              <button class="acc-header d-flex align-items-center justify-content-between" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false"
                 aria-controls="collapseExample1" (click)="toggleIcon1()">
                 <div class="accordionTitle">How many times can I access my certificate?</div>
@@ -187,7 +189,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="accordionWrapper">
-              <button class="btn acc-header d-flex align-items-center justify-content-between" type="button"
+              <button class="acc-header d-flex align-items-center justify-content-between" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false"
                 aria-controls="collapseExample2" (click)="toggleIcon2()">
                 <div class="accordionTitle">Who can verify certificates?</div>
@@ -215,7 +217,7 @@
           </div>
           <div class="col-md-6">
             <div class="accordionWrapper">
-              <button class="btn acc-header d-flex align-items-center justify-content-between" type="button"
+              <button class="acc-header d-flex align-items-center justify-content-between" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false"
                 aria-controls="collapseExample3" (click)="toggleIcon3()">
                 <div class="accordionTitle">Will I pay to get my certificates?</div>
@@ -245,7 +247,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="accordionWrapper">
-              <button class="btn acc-header d-flex align-items-center justify-content-between" type="button"
+              <button class="acc-header d-flex align-items-center justify-content-between" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false"
                 aria-controls="collapseExample4" (click)="toggleIcon4()">
                 <div class="accordionTitle">How do I verify my certificate?</div>
@@ -273,7 +275,7 @@
           </div>
           <div class="col-md-6">
             <div class="accordionWrapper">
-              <button class="btn acc-header d-flex align-items-center justify-content-between" type="button"
+              <button class="acc-header d-flex align-items-center justify-content-between" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseExample5" aria-expanded="false"
                 aria-controls="collapseExample5" (click)="toggleIcon5()">
                 <div class="accordionTitle">What can I do if I lost my printed certificate?</div>
