--- a/src/app/modal/confirmModal/confirmModal.component.html
+++ b/src/app/modal/confirmModal/confirmModal.component.html
@@ -9,7 +9,7 @@
         <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
       </div>
 
-      <div class="bordered-box borderRadiusFour modalBoxInside">
+      <div class="borderRadiusFour modalBoxInside">
         <h5 class="modal-title fs-16 lh-22 fw-700" [ngClass]="cmodalInfo?.titleCss"   *ngIf="cmodalInfo?.title" id="modalTitle">{{cmodalInfo?.title}}</h5>
       <div class="modal-body p-6 dotted-box rounded d-flex flex-column justify-content-center align-items-center text-center">
         <!-- <img width="50" [src]="cmodalInfo?.image" /> <br /> -->
