--- a/src/app/upload-result/upload-result.component.html
+++ b/src/app/upload-result/upload-result.component.html
@@ -137,7 +137,7 @@
         <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
       </div>
 
-      <div class="m-4 p-3 bordered-box">
+      <div class="m-4 p-3">
         <h5 class="modal-title fs-16 m-3 fw-700" [ngClass]="cmodalInfo?.titleCss" *ngIf="cmodalInfo?.title"
           id="modalTitle">
           {{ cmodalInfo?.title }}
