--- a/src/app/upload-result/upload-result.component.scss
+++ b/src/app/upload-result/upload-result.component.scss
@@ -72,7 +72,7 @@
     font-size: 14px;
     line-height: 18px;
     font-weight: 400;
-    font-family: 'Rubik', sans-serif !important;
+    font-family: "Poppins", sans-serif;
     border: 1px solid #aeb3cd !important;
     border-radius: 6px !important;
 
@@ -100,6 +100,5 @@
 }
 
 .confirmdotted-box {
-  border: 1px dotted #828282;
   padding: 40px 50px;
 }
