--- a/src/app/download-certificate/downloadcertificate.component.html
+++ b/src/app/download-certificate/downloadcertificate.component.html
@@ -49,11 +49,11 @@
         </table>
 
         <!-- Table to show "No Records Found" -->
-        <table class="text-center my-5 w-100" *ngIf="certificateList.length === 0">
+        <table class="text-center w-100 mt-250" *ngIf="certificateList.length === 0">
             <tbody class="fs-5">
                 <tr>
                     <td [attr.colspan]="tableSchema?.fields?.length || 1" class="fs-20 fw-400 lh-27">
-                        {{ 'NO_RECORDS_FOUND' | translate }}
+                        <h2>{{ 'NO_RECORDS_FOUND' | translate }}</h2>
                     </td>
                 </tr>
             </tbody>
