--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -81,16 +81,20 @@ hr {
     outline: 0;
     width: 65px;
 }
+
 .header {
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 2;
+
     @media (max-width: 767.98px) {
         .custom-header {
             justify-content: normal !important;
+
             .logo-text {
                 width: calc(100% - 30px);
+
                 // text-align: center;
                 a {
                     display: inline-block;
@@ -98,11 +102,14 @@ hr {
             }
         }
     }
+
     @media (max-width: 991.98px) {
         .custom-header {
             justify-content: normal !important;
+
             .logo-text {
                 width: calc(100% - 30px);
+
                 // text-align: center;
                 a {
                     display: inline-block;
@@ -111,7 +118,8 @@ hr {
         }
     }
 }
-.banner{
+
+.banner {
     background: black;
     color: white;
     display: flex;
@@ -122,12 +130,12 @@ hr {
     margin: 0;
     width: 100%;
     text-align: center;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-family: "Poppins", sans-serif;
 }
 
 @media (max-width: 767.98px) {
-    .banner{
-        height:64px;
+    .banner {
+        height: 64px;
         padding: 11px 26px;
         background: black;
         color: white;
@@ -138,8 +146,8 @@ hr {
         margin: 0;
         width: 100%;
         text-align: center;
-        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    
+        font-family: "Poppins", sans-serif;
+
     }
-    
+
 }
