--- a/src/app/tables/tables.component.css
+++ b/src/app/tables/tables.component.css
@@ -9,24 +9,31 @@
 }
 
 .table-container {
-  height: 60vh; /* Set a fixed height for scrolling */
-  overflow-y: auto; /* Enable vertical scroll */
+  height: 70vh;
+  /* Set a fixed height for scrolling */
+  overflow-y: auto;
+  /* Enable vertical scroll */
   position: relative;
-  font-family: 'Rubik', sans-serif !important;
+  font-family: "Poppins", sans-serif;
+}
+
+
+
+.table>thead {
+  background: #DDE1FF;
 }
 
 table tr {
-  text-align: center;
+  text-align: left;
 }
 
 table td {
-  justify-content: center;
+  justify-content: left;
   vertical-align: middle;
-  padding: 10px;
+  padding-left: 22px;
 }
 
 table td .dsn-g-btn {
-  border: none !important;
   padding: 8px 20px !important;
   font-size: 14px;
   font-weight: 400 !important;
