--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -38,7 +38,7 @@
                                         [ngClass]="button.classes">
                                         {{button.buttonText | translate}}
                                     </a>
-                                    
+
                                     <a *ngIf="button?.action == 'requestCall' && !button.redirectTo"
                                         (click)="actionFunction('post',button, item, i)"
                                         class="btn btn-bg btn-style text-primary-color text-end fw-bold text-capitalize dns-btn pt-2"
@@ -219,13 +219,13 @@
             </tbody>
 
         </table>
-        <table class=" text-center my-5 w-100" *ngIf="!tableSchema?.items?.length">
+        <table class="text-center w-100 mt-250" *ngIf="!tableSchema?.items?.length">
             <tbody class="fs-5">
 
                 <tr *ngIf="!tableSchema?.items?.length">
 
                     <td [attr.colspan]="tableSchema?.items?.length" class="fs-20 fw-400 lh-27">
-                        {{'NO_RECORDS_FOUND' | translate }}
+                        <h2>{{'NO_RECORDS_FOUND' | translate }}</h2>
                     </td>
                 </tr>
             </tbody>
