--- a/src/app/vc-approved-list/vc-approved-list.component.html
+++ b/src/app/vc-approved-list/vc-approved-list.component.html
@@ -33,15 +33,15 @@
         </table>
 
         <!-- Table to show "No Records Found" -->
-        <table class="text-center my-5 w-100" *ngIf="certificateList.length === 0">
+        <table class="text-center w-100 mt-250" *ngIf="certificateList.length === 0">
             <tbody class="fs-5">
-                <tr>
-                    <td [attr.colspan]="tableSchema?.fields?.length || 1" class="fs-20 fw-400 lh-27">
-                        {{ 'NO_RECORDS_FOUND' | translate }}
-                    </td>
-                </tr>
+                <td [attr.colspan]="tableSchema?.fields?.length || 1" class="fs-20 fw-400 lh-27">
+                    <h2>{{ 'NO_RECORDS_FOUND' | translate }}</h2>
+                </td>
             </tbody>
         </table>
+
+
     </div>
     <app-confirm-modal></app-confirm-modal>
 </div>
