Task #231585-  [FE] - Sonar cloud fixes in issuance platform

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,7 +72,7 @@
 
           <div class="col-md-5 right-sec">
             <div class="d-flex dflex-dc-column align-center">
-              <img class="ml-2 img-fluid" src="assets/images/happy-smiling-village-kids-image.jpg" />
+              <img class="ml-2 img-fluid" src="assets/images/happy-smiling-village-kids-image.jpg" alt="banner" />
             </div>
           </div>
         </div>
@@ -305,11 +305,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <div class="container d-flex justify-content-center align-items-center gap-27 text-center mt-50 mb-20">
-    <div><img width="160px" src="assets/images/educert_logo.png" /></div>
-    <div><img width="160px" src="assets/images/bill.png" /></div>
-  </div> -->
 </div>
 <ng-template #defaultBlock>
   <nav class="item-menu">
@@ -317,7 +312,7 @@
     <br />
     <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
     <label id="menu-open-handler" class="menu-open-button" for="menu-open">
-      <span class="mt-20"><img src="/assets/images/logo.png" alt="image" /></span>
+      <span class="mt-20"><img src="/assets/images/logo.png" alt="logo" /></span>
     </label>
     <div class="real-menu">
       <a href="https://docs.sunbirdrc.dev/capabilities/enrolment" class="menu-item" data-name="Enrolment"
