--- a/src/app/issure/verify-certificate/verify-certificate.component.scss
+++ b/src/app/issure/verify-certificate/verify-certificate.component.scss
@@ -6,7 +6,8 @@
 }
 
 .errCard {
-  background-color: #f8d7da !important; /* Light red background */
+  background-color: #f8d7da !important;
+  /* Light red background */
 }
 
 .bordered-box {
@@ -37,19 +38,23 @@
 .width-95 {
   width: 95% !important;
 }
+
 .modal-backdrop-blur {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Darken the background */
-  backdrop-filter: blur(8px); /* Blur effect */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Darken the background */
+  backdrop-filter: blur(8px);
+  /* Blur effect */
   z-index: 1050;
 }
 
 .modal-content {
-  z-index: 1050; /* Ensure the modal content is on top of the backdrop */
+  z-index: 1050;
+  /* Ensure the modal content is on top of the backdrop */
 }
 
 .vc-cardL {
@@ -60,10 +65,8 @@
   min-height: 250px;
   width: 300px;
   padding: 15px;
-  border-radius: 4px;
   border: #80808029 solid 1px;
   font-size: 14px;
-  width: 318px;
 }
 
 table {
@@ -83,6 +86,7 @@ th {
 .p24 {
   font-size: 24px;
 }
+
 /* // ------------------------------------------------------ */
 
 .verifierLabel {
@@ -109,13 +113,15 @@ th {
   }
 }
 
-@media screen and (max-device-width: 1000px), screen and (max-width: 1400px) {
+@media screen and (max-device-width: 1000px),
+screen and (max-width: 1400px) {
   .vc-scanW {
     width: 40%;
   }
 }
 
-@media screen and (max-device-width: 100px), screen and (max-width: 1000px) {
+@media screen and (max-device-width: 100px),
+screen and (max-width: 1000px) {
   .vc-scanW {
     width: 70%;
   }
