--- a/src/app/upload-result/upload-result.component.scss
+++ b/src/app/upload-result/upload-result.component.scss
@@ -5,15 +5,9 @@
 }
 
 .bordered-box {
-  border: 1px solid #bdbdbd;
-  background-color: #f1f5f8;
-  margin: 30px 70px !important;
   padding-bottom: 0px !important;
 }
 
-.dotted-box {
-  border: 3px dashed #366746;
-}
 
 .file-upload1 i {
   color: #333;
@@ -37,7 +31,7 @@
 }
 
 .drag-drop {
-  border: 2px dashed #366746;
+  border: 2px dashed #000;
   border-radius: 10px;
   text-align: center;
   padding: 20px;
@@ -72,7 +66,7 @@
     font-size: 14px;
     line-height: 18px;
     font-weight: 400;
-    font-family: 'Rubik', sans-serif !important;
+    font-family: "Poppins", sans-serif;
     border: 1px solid #aeb3cd !important;
     border-radius: 6px !important;
 
@@ -100,6 +94,5 @@
 }
 
 .confirmdotted-box {
-  border: 1px dotted #828282;
   padding: 40px 50px;
 }
