--- a/src/app/discovery/search/search.component.scss
+++ b/src/app/discovery/search/search.component.scss
@@ -1,4 +1,4 @@
-dl{
+dl {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -9,18 +9,21 @@ dl{
     margin-top: -20px !important;
 }
 
-dt{
+dt {
     font-weight: 500;
 }
-dl,dt{
+
+dl,
+dt {
     flex-basis: 30%;
     margin-bottom: 0 !important;
 }
 
-.h-100vh{
+.h-100vh {
     height: 100vh;
 }
-.blue-shade-btn{
+
+.blue-shade-btn {
     background: #7f6ae245;
     padding: 0.6rem;
     border-radius: 5px;
@@ -37,9 +40,9 @@ dl,dt{
     width: 100%;
     height: 100%;
     -webkit-transform: translate3d(0%, 0, 0);
-        -ms-transform: translate3d(0%, 0, 0);
-         -o-transform: translate3d(0%, 0, 0);
-            transform: translate3d(0%, 0, 0);
+    -ms-transform: translate3d(0%, 0, 0);
+    -o-transform: translate3d(0%, 0, 0);
+    transform: translate3d(0%, 0, 0);
 }
 
 .modal.left .modal-content,
@@ -48,13 +51,13 @@ dl,dt{
     overflow-y: auto;
 }
 
-.right-xl-modal{
-    &.modal{
+.right-xl-modal {
+    &.modal {
         right: 0 !important;
-      //  width: 70% !important;
         left: inherit !important;
     }
-    .modal-dialog{
+
+    .modal-dialog {
         max-width: 680px !important;
         margin: 0 auto !important;
     }
@@ -66,15 +69,15 @@ dl,dt{
 }
 
 /*Left*/
-.modal.left.fade .modal-dialog{
+.modal.left.fade .modal-dialog {
     left: -320px;
     -webkit-transition: opacity 0.3s linear, left 0.3s ease-out;
-       -moz-transition: opacity 0.3s linear, left 0.3s ease-out;
-         -o-transition: opacity 0.3s linear, left 0.3s ease-out;
-            transition: opacity 0.3s linear, left 0.3s ease-out;
+    -moz-transition: opacity 0.3s linear, left 0.3s ease-out;
+    -o-transition: opacity 0.3s linear, left 0.3s ease-out;
+    transition: opacity 0.3s linear, left 0.3s ease-out;
 }
 
-.modal.left.fade.in .modal-dialog{
+.modal.left.fade.in .modal-dialog {
     left: 0;
 }
 
@@ -82,9 +85,9 @@ dl,dt{
 .modal.right.fade .modal-dialog {
     right: -0;
     -webkit-transition: opacity 0.3s linear, right 0.3s ease-out;
-       -moz-transition: opacity 0.3s linear, right 0.3s ease-out;
-         -o-transition: opacity 0.3s linear, right 0.3s ease-out;
-            transition: opacity 0.3s linear, right 0.3s ease-out;
+    -moz-transition: opacity 0.3s linear, right 0.3s ease-out;
+    -o-transition: opacity 0.3s linear, right 0.3s ease-out;
+    transition: opacity 0.3s linear, right 0.3s ease-out;
 }
 
 .modal.right.fade.in .modal-dialog {
@@ -103,60 +106,61 @@ dl,dt{
 }
 
 /* ----- v CAN BE DELETED v ----- */
-/* body {
-background-color: #78909C;
-} */
+
 
 .demo {
-padding-top: 60px;
-padding-bottom: 110px;
+    padding-top: 60px;
+    padding-bottom: 110px;
 }
 
 .btn-demo {
-margin: 15px;
-padding: 10px 15px;
-border-radius: 0;
-font-size: 16px;
-background-color: #FFFFFF;
+    margin: 15px;
+    padding: 10px 15px;
+    border-radius: 0;
+    font-size: 16px;
+    background-color: #FFFFFF;
 }
 
 .btn-demo:focus {
-outline: 0;
+    outline: 0;
 }
+
 #footer {
     position: absolute;
     bottom: 0px;
     width: 100%;
 }
 
-#content, #sidebar { 
-    margin-bottom: 5em; 
+#content,
+#sidebar {
+    margin-bottom: 5em;
 }
 
 .demo-footer {
-position: fixed;
-bottom: 0;
-width: 100%;
-padding: 15px;
-background-color: #212121;
-text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 15px;
+    background-color: #212121;
+    text-align: center;
 }
 
-.demo-footer > a {
-text-decoration: none;
-font-weight: bold;
-font-size: 16px;
-color: #fff;
+.demo-footer>a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
 }
-.red{
+
+.red {
     color: red;
 }
 
-mb-2{ 
+mb-2 {
     margin: bottom 2px;
 }
 
-.noToBottom{
+.noToBottom {
     margin-top: 10px;
     padding-bottom: 40px;
 }
