--- a/src/app/issure/get-records/get-records.component.html
+++ b/src/app/issure/get-records/get-records.component.html
@@ -5,41 +5,27 @@
 
 
 <div class="container">
-    <!-- <div class="d-flex flex-row flex-nowrap overflow-auto">
-        <div class="card card-block small-card mx-2 p-2" *ngFor="let card of cards">
-            <p class="p16 mb-1">{{card?.title}}</p>
-            <h2>{{card?.records}}</h2>
-            <p class="p12 mb-1">Records</p>
-        </div>
-
-    </div> -->
-<br />
     <div class="d-flex mt-3" *ngIf="documentName">
-        <a  class="line-height32" href="/dashboard"><i
-            class="fa fa-angle-left primary-text mb-2"></i> </a> &nbsp; &nbsp;
-            
+        <a class="line-height32" href="/dashboard"><i class="fa fa-angle-left primary-text mb-2"></i> </a> &nbsp; &nbsp;
         <span class="heading-2 mt-1 fw-bold">{{documentName}}</span>
-        
     </div>
-
-   
-
     <div class="mb-3 mt-3">
-        <span class="heading-2" *ngIf="recordItems?.length == 1 || !recordItems?.length">{{recordItems?.length}} Record</span>
+        <span class="heading-2" *ngIf="recordItems?.length == 1 || !recordItems?.length">{{recordItems?.length}}
+            Record</span>
         <span class="heading-2" *ngIf="recordItems?.length > 1">{{recordItems?.length}} Records</span>
-        
-            <div class="ml-4 float-end">
-                <div data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">            
-                    <!-- <i class="fa fa-ellipsis-h text-secondary cursor-pointer" aria-hidden="true"></i> -->
-                    <!-- routerLink="/add-records/{{documentName}}" -->
-                    <a> <button type="button" id="btnAddRecord"
+
+        <div class="ml-4 float-end">
+            <div data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a> <button type="button" id="btnAddRecord"
                         class="btn btn-primary btn-primary-sm text-capitalize  p0">Add </button></a>
-                </div>
-                <div class="dropdown-menu float-end" id="opAddRecord">
-                <a class="dropdown-item" id="singleRecord" href="/add-records/{{documentName}}/{{osid}}">Add Single record</a>
-                <a class="dropdown-item" id="bulkRecord" href="/bulk-records/{{documentName}}/{{osid}}">Add Bulk record</a>
-                </div>
             </div>
+            <div class="dropdown-menu float-end" id="opAddRecord">
+                <a class="dropdown-item" id="singleRecord" href="/add-records/{{documentName}}/{{osid}}">Add Single
+                    record</a>
+                <a class="dropdown-item" id="bulkRecord" href="/bulk-records/{{documentName}}/{{osid}}">Add Bulk
+                    record</a>
+            </div>
+        </div>
     </div>
 
     <div class="card" *ngIf="!recordItems?.length">
@@ -50,38 +36,27 @@
     </div>
 
     <div class="card" *ngIf="recordItems?.length">
-    <table class="card-body">
-        <tr>
-          <th class="heading-4 sb-gray-color">Name</th>
-          <th class="heading-4 sb-gray-color" *ngIf="recordItems[0]?.contact">Mobile Number </th>
-          <th class="heading-4 sb-gray-color" *ngIf="recordItems[0]?.email">Email ID </th>
-          <!-- <th class="heading-4 sb-gray-color">Issued Date</th> -->
-          <th></th>
-        </tr>
-        <tr *ngFor="let item of recordItems" class="p-3">
-          <td class="heading-3 sb-text-primary">{{item?.name}}</td>
-          <td class="heading-3" *ngIf="item?.contact">{{item?.contact | mask:0:6}}</td>
-          <td class="heading-3" *ngIf="item?.email">{{item?.email | mask:0:3}}</td>
+        <table class="card-body">
+            <tr>
+                <th class="heading-4 sb-gray-color">Name</th>
+                <th class="heading-4 sb-gray-color" *ngIf="recordItems[0]?.contact">Mobile Number </th>
+                <th class="heading-4 sb-gray-color" *ngIf="recordItems[0]?.email">Email ID </th>
+                <th></th>
+            </tr>
+            <tr *ngFor="let item of recordItems" class="p-3">
+                <td class="heading-3 sb-text-primary">{{item?.name}}</td>
+                <td class="heading-3" *ngIf="item?.contact">{{item?.contact | mask:0:6}}</td>
+                <td class="heading-3" *ngIf="item?.email">{{item?.email | mask:0:3}}</td>
+                <td class="d-flex justify-content-end">
+                    <a routerLink="/pdf-view/{{documentName}}/{{item?.osid}}">
+                        <div (click)="onPress(item)">
 
-       <!-- ?   <td class="heading-3">{{item?.osCreatedAt | date : 'dd MMM y'}} </td> -->
-          <td class="d-flex justify-content-end">
-               <!--   <div (click)="downloadVc(item)">
-                <i class="fa fa-download sb-text-primary cursor-pointer" aria-hidden="true" title="Download"></i>
-            </div> -->
-         <a routerLink="/pdf-view/{{documentName}}/{{item?.osid}}">
-              <div (click)="onPress(item)"> 
-              
-                <i class="fa fa-eye sb-text-primary cursor-pointer" aria-hidden="true" title="View Certificate" ></i>
-            </div> 
-        </a>
-     
-           
-          </td>
-          <!-- <td class="float-end text-primary"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i></td> -->
-        </tr>
-      </table>
+                            <i class="fa fa-eye sb-text-primary cursor-pointer" aria-hidden="true"
+                                title="View Certificate"></i>
+                        </div>
+                    </a>
+                </td>
+            </tr>
+        </table>
     </div>
-
-    
-
 </div>
